--- a/localisation/LegacyOfRome.csv
+++ b/localisation/LegacyOfRome.csv
@@ -1,18 +1,18 @@
 ﻿#CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 eunuch;宦官;;;;;;;;;;x
-eunuch_desc;这个人物已经被阉割成了一个宦官.;;;;;;;;;;x
+eunuch_desc;此人已经被阉割成了一个宦官.;;;;;;;;;;x
 blinded;致盲;;;;;;;;;;x
 blinded_desc;这个人物已经被致盲而永久失明.;;;;;;;;;;x
 born_in_the_purple;紫衣贵族;;;;;;;;;;x
 born_in_the_purple_desc;这个角色生于紫室-字面意思就是'出生于紫色的房间'. 这是一个专属于在位皇帝或女皇降生于皇宫紫色寝宫的子女的荣誉. 他们的继承权要优先于父母登基以前就出生的兄长们.;;;;;;;;;;x
 augustus;奥古斯都;;;;;;;;;;x
-augustus_desc;这个人物是现任罗马帝国的统治者，理应得到符合其身份的尊重.;;;;;;;;;;x
+augustus_desc;此人是重生的罗马帝国的现任统治者，理应得到符合其身份的尊重.;;;;;;;;;;x
 title_imperial_eunuch;大内侍;;;;;;;;;;x
 title_imperial_eunuch_desc;大内侍， "睡在皇帝身边的人"是一项著名的预留给忠诚和谨慎的宦官的宫廷职位..;;;;;;;;;;x
 title_court_eunuch;宫廷宦官;;;;;;;;;;x
 title_court_eunuch_desc;宦官们在宫廷中发挥了许多有价值的作用，而且在有女性的场合也值得信任..;;;;;;;;;;x
 vassal_castrate_decision;阉割[Root.GetTitledFirstName];;;;;;;;;;x
-vassal_castrate_decision_desc;若他是你的囚犯，你可以下令阉割§Y[Root.GetTitledFirstName]§!，让它变成太监。随后他将被释放，但不能再生育或拥有土地头衔。一种十分严厉的惩罚。;;;;;;;;;;x
+vassal_castrate_decision_desc;若他是你的囚犯，你可以下令阉割§Y[Root.GetTitledFirstName]§!，让它变成宦官。随后他将被释放，但不能再生育或拥有土地头衔。一种十分严厉的惩罚。;;;;;;;;;;x
 vassal_blinding_decision;致盲 [Root.GetTitledFirstName];;;;;;;;;;x
 vassal_blinding_decision_desc;若[Root.GetSheHe]是你的囚犯，你可以下命令致盲§Y[Root.GetTitledFirstName]§!然后释放[Root.GetHerHim]。这是一种拜占庭常用的方法，以不杀人的方式来对付政敌，失明后的[Root.GetManWoman]对王权就没有威胁了。;;;;;;;;;;x
 opinion_castrated_me;阉割了我;;;;;;;;;;x
@@ -23,20 +23,20 @@ opinion_loyal_servant;忠实的仆人;;;;;;;;;;x
 nick_the_glorious;荣耀的;;;;;;;;;;x
 nick_the_saint;圣徒;;;;;;;;;;x
 EVTNAMELoR.1;叙利亚培勒舍蒂那行省;;;;;;;;;;x
-EVTDESCLoR.1;我们已经从野蛮人手中解放了古老的叙利亚培勒舍蒂那行省让它重归罗马帝国。一次盛大的凯旋仪式将为完成此次壮举的英雄们举行，他们的姓名与他们的功绩将会永远被罗马铭记！;;;;;;;;;;x
+EVTDESCLoR.1;我们已经从野蛮人手中解放了古老的叙利亚培勒舍蒂那行省让它重归罗马帝国。一次盛大的凯旋仪式将为完成此次壮举的英雄们举行，他们的姓名与他们的功绩永垂青史！;;;;;;;;;;x
 EVTOPTALoR.1;帝国万岁！;;;;;;;;;;x
 EVTNAMELoR.2;埃古普托斯行省;;;;;;;;;;x
-EVTDESCLoR.2;埃古普托斯人民的黑暗时代已经过去，再次回归了罗马的统治. 法老的土地是旧帝国的大好粮仓，并且它将在永世昌盛的罗马重新成为至关重要的基石..;;;;;;;;;;x
+EVTDESCLoR.2;埃及人民的黑暗时代已经过去，再次回归了罗马的统治。这片法老的土地同样是旧帝国的大好粮仓，并且它将在永世昌盛的罗马国家重新成为至关重要的基石..;;;;;;;;;;x
 EVTNAMELoR.3;昔兰尼加行省;;;;;;;;;;x
-EVTDESCLoR.3;昔兰尼加的市民们可以庆祝了，因为罗马的法律再一次屹立在这片贫瘠的土地上。文明世界目睹了它回到了罗马帝国的怀抱，愿它永离野蛮人残酷的魔掌。;;;;;;;;;;x
+EVTDESCLoR.3;昔兰尼加的公民们可以庆祝了，因为罗马法再一次屹立在这片贫瘠的土地上。文明世界目睹了又一个古罗马行省回归了这个最神圣的帝国的怀抱，愿它永离野蛮人残酷的魔掌。;;;;;;;;;;x
 EVTNAMELoR.4;阿非利加行省;;;;;;;;;;x
 EVTDESCLoR.4;[Root.GetTitledFirstName]的势力现已遍布前罗马的阿非利加行省，再次将其纳入帝国囊中.帝国军队正在行军通过古老的罗马宿敌迦太基城，历史必将重现..;;;;;;;;;;x
 EVTNAMELoR.5;伊利里库姆行省;;;;;;;;;;x
 EVTDESCLoR.5;曾经罗马行省伊利里库姆已经重归了它真正的主人手里，复兴的罗马帝国以亚得里亚海东海岸作为天然的屏障，未来这个重要的兵源地将会在夺回西方疆域的战争中展现它的价值...;;;;;;;;;;x
 EVTNAMELoR.6;意大利亚行省;;;;;;;;;;x
-EVTDESCLoR.6;在西罗马帝国的陷落后，意大利第二次解放重归罗马帝国的统治--希望这次运势更佳. 伟大之都罗马已经在你的手中.当帝国旗帜在图拉真柱上在微风之中飘扬，甚至坚强的战士们都开始哭泣.;;;;;;;;;;x
-EVTNAMELoR.7;高卢利亚行省;;;;;;;;;;x
-EVTDESCLoR.7;很长一段时间内罗马认为永远失去的省份，高卢	已经臣服于[Root.GetTitle]并回归帝国的统治. 自千年以前凯撒发动战争，这片土地已经变化很多， 但将永不再遭受暴发户国王和伪帝的统治.;;;;;;;;;;x
+EVTDESCLoR.6;在西部帝国的陷落后，意大利第二次解放重归正统罗马人的统治--希望这次运势更佳. 伟大之都罗马已经在你的手中.当帝国旗帜在图拉真柱上在微风之中飘扬，甚至坚强的战士们都开始哭泣.;;;;;;;;;;x
+EVTNAMELoR.7;高卢行省;;;;;;;;;;x
+EVTDESCLoR.7;作为很长一段时间内罗马认为永远失去的省份，高卢已经臣服于[Root.GetTitle]并回归帝国的统治. 自千年以前凯撒发动战争，这片土地已经变化很多， 但将永不再遭受暴发户国王和伪帝的统治.;;;;;;;;;;x
 EVTNAMELoR.8;日耳曼尼亚行省;;;;;;;;;;x
 EVTDESCLoR.8;帝国的边界扩张超过了图拉真大帝曾有的疆域.日耳曼尼亚这一昔日帝国灭亡的罪魁祸首，现已获得了和平重归帝国的统治. 它将由真正的罗马帝国治理，而不是冒牌的帝国.;;;;;;;;;;x
 EVTNAMELoR.9;不列颠尼亚行省;;;;;;;;;;x
@@ -52,7 +52,7 @@ EVTDESCLoR.13;罗马帝国现在的边界已经超越了古代哈德良长城和
 EVTNAMELoR.14;希伯尼亚行省;;;;;;;;;;x
 EVTDESCLoR.14;希伯尼亚岛是最新加入不断扩张的罗马帝国的领土. 旧帝国从未征服这片土地上漫漫起伏的群山和绿色的田野，但是如果不介意下雨或沿着海岸定居的恶臭的挪威移民，它应该能治理为一个令人舒适的采邑.;;;;;;;;;;x
 restore_roman_empire;重建罗马帝国;;;;;;;;;;x
-restore_roman_empire_desc;如果能够恢复旧帝国的罗马城和其他主要领地，拜占庭帝国将在西方世界的眼中被认可为真正的和合法的罗马的继承者..;;;;;;;;;;x
+restore_roman_empire_desc;如果旧帝国的罗马城和其他主要领地能得到恢复，那么拜占庭帝国将在西方世界的眼中被认可为真正的和合法的罗马的继承者..;;;;;;;;;;x
 EVTTOOLTIPLoR.20;罗马帝国重建了.;;;;;;;;;;x
 EVTNAMELoR.20;新时代的曙光;;;;;;;;;;x
 EVTDESCLoR.20;朋友们，同胞们，罗马公民们，欢呼吧！ 在奇迹般收复了诸多失去长达数个世纪的领土后，罗马帝国重生了！自帝国边疆遭到野蛮人的袭击以来，一个又一个的省份被焚为焦土，欧罗巴经历了最为黑暗的时代，但现在对整个文明世界来说一个光明的新时代已经到来了！\n\n从现在开始，罗马国不再是那个西方嫉妒的冒牌货口中的“希腊人的帝国”了 ，她将是被公认的罗马帝国的后继者！ [Root.GetTitledFirstName] 统治着整个重建的罗马帝国， 但仍有许多工作需要完成。还有许多领土等着我们去夺回，诸多疆域等着我们去收复。为了元老院和罗马人民！;;;;;;;;;;x
@@ -70,7 +70,7 @@ EVTDESCLoR.31;一场盛大的凯旋式将在竞技场举行，庆祝打败了帝
 EVTOPTALoR.31;帝国即将成功.;;;;;;;;;;x
 EVTDESCLoR.32;[Root.Liege.GetTitle]已经下令庆祝帝国最近的胜利，在竞技场为勇敢的士兵们举行凯旋式.当号手引领着阅兵式队列行进，马车上装满了战利品笼子里关押着最近战斗获得的战俘，人群中发出了欢呼.;;;;;;;;;;x
 EVTOPTALoR.32;一场令人印象深刻的表演.;;;;;;;;;;x
-opinion_triumph_held;举行凯旋打典;;;;;;;;;;x
+opinion_triumph_held;举行凯旋式;;;;;;;;;;x
 triumph_held;你的封臣都被帝国的力量所感动.;;;;;;;;;;x
 EVTNAMELoR.40;帝国的边界恢复了;;;;;;;;;;x
 EVTDESCLoR.40;罗马帝国光复史诗将传颂千秋万代. 当野蛮人肆意洗劫或者从沙漠而来的阿拉伯侵略者蹂躏着罗马帝国，那些不幸经历了黑暗日子的人们想都不敢想会有这么一天. 所有旧日的省份已经光复，并且帝国的疆域比近一千年来扩张得更远.\n\n教堂的钟响了，整个欧罗巴都在庆祝这个重大的时刻.在罗马和君士坦丁堡男人们和女人们满怀着喜悦的泪水. 保持一个如此规模的帝国将会是一场挑战，但是为了全人类你必须成功，唯恐世界陷入另一个丧失了罗马指明灯的无知和残暴的黑暗时代.;;;;;;;;;;x
@@ -196,7 +196,7 @@ EVTOPTALoR.832;他自找的.;;;;;;;;;;x
 EVTTOOLTIPLoR.833;§Y[Root.GetTitledFirstName]§!被阉割了;;;;;;;;;;x
 EVTDESCLoR.833;你牢房外突然发生的骚动吵醒了你，你想知道发生了什么事.一个老得掉牙的男人拿着装满手术器械的背包和狱卒一起进来了."[From.GetTitle]以[From.GetHerHis]怜悯之心，已经下令释放你，"一名守卫说 "在你被阉割之后.";;;;;;;;;;x
 EVTOPTALoR.833;不! 不!!! 不要啊!!!!!;;;;;;;;;;x
-EVTDESCLoR.834;你被阉割成了一名太监.你真是个极品了，难道不是吗？;;;;;;;;;;x
+EVTDESCLoR.834;你被阉割成了一名阉人。你真是个极品了，难道不是吗？;;;;;;;;;;x
 EVTOPTALoR.834;这是个暴力的时代.;;;;;;;;;;x
 EVTDESCLoR.840;蓝党和绿党两支队伍的支持者在竞技场发生了冲突，暴乱已起！城市守卫正在战斗以控制局势，北欧卫队却正在待命.他们能够在暴动在蔓延到其他街区前把那些暴徒打成肉酱，但这将会有巨大的误伤和破坏...;;;;;;;;;;x
 EVTOPTALoR.840;出动北欧卫队.;;;;;;;;;;x
@@ -275,7 +275,7 @@ EVTTOOLTIPLoR.886;商队在城内过夜.;;;;;;;;;;x
 EVTDESCLoR.886;当夜幕降临，那个胖商人坐在火边给你和其余的宫廷成员讲述他旅行的故事.他的胃看起来永远填不满，而你不想被看做是一名穷酸小气的东道主，你下令让你的仆人再上一轮菜.;;;;;;;;;;x
 EVTOPTALoR.886;告诉我们更多有关神话般的印度罗闍DLC的事情吧.;;;;;;;;;;x
 eunuch_offer;商人继续讲他的故事.;;;;;;;;;;x
-EVTDESCLoR.887;黎明时分商队准备离开了.商人坚持送你礼物感谢你的好客.他用外国话喊了句命令，一名年轻人走上前来. "这么阉人将很好的侍奉您，" 商人说到"他对主人您的忠心，将无可指责.";;;;;;;;;;x
+EVTDESCLoR.887;黎明时分商队准备离开了.商人坚持送你礼物感谢你的好客.他用外国话喊了句命令，一名年轻人走上前来. "这名阉人将很好的侍奉您，" 商人说到"他对主人您的忠心，将无可指责.";;;;;;;;;;x
 EVTOPTALoR.887;这太好了，我接受这份礼物.;;;;;;;;;;x
 EVTOPTBLoR.887;不，这仆人你应该留着.;;;;;;;;;;x
 eunuch_declined;你拒绝了馈赠.;;;;;;;;;;x
