--- a/localisation/v1_06.csv
+++ b/localisation/v1_06.csv
@@ -88,7 +88,7 @@ e_scandinavia_adj;斯堪的纳维亚;;;;;;;;;;x
 e_france;法兰克;;;;;;;;;;x
 e_france_adj;法兰克;;;;;;;;;;x
 mujahid;圣战士;;;;;;;;;;x
-mujahid_desc;此人乃是圣战老兵.;;;;;;;;;;x
+mujahid_desc;此人乃是吉哈德老兵.;;;;;;;;;;x
 hajjaj;哈伊;;;;;;;;;;x
 hajjaj_desc;此人曾去麦加朝觐过.;;;;;;;;;;x
 on_hajj;朝觐中;;;;;;;;;;x
@@ -590,7 +590,7 @@ mod_bad_work_calligrapher;差劲的书法作品;;;;;;;;;;x
 FURUSIYYATITLE;骑术大会;;;;;;;;;;x
 furusiyya_invite;邀请所有尚武之人;;;;;;;;;;x
 FAM_FORMER_HUSBANDS;前夫;;;;;;;;;;x
-FAM_SECONDARY_WIVES;续弦;;;;;;;;;;x
+FAM_SECONDARY_WIVES;平妻;;;;;;;;;;x
 FAM_FORMER_WIVES;前妻;;;;;;;;;;x
 CHURCH_NAME;$RELIGION$信仰;;;;;;;;;;x
 diligent_poet;勤奋的诗人;;;;;;;;;;x
@@ -695,7 +695,7 @@ EVTNAME89500;马可波罗游记;;;;;;;;;;x
 EVTDESC89500;经过了数年和父亲与叔父在远东的游历, 威尼斯商人马可波罗终于回到了欧洲. 旅程的记录被写成一本叫"马可波罗游记"的书出版了. 书里描绘了遥远土地上的契丹和蛮子, 给读者们提供了欧洲以外世界的惊鸿一瞥, 但是也有人认为整个故事是捏造的;;;;;;;;;;x
 EVTOPTA89500;不管怎么说, 这都是个惊艳的故事!;;;;;;;;;;x
 EVTNAME89501;郑和下西洋;;;;;;;;;;x
-EVTDESC89501;一支来自远方大陆中国的庞大舰队出现在了阿拉伯海. 舰队由太监郑和, 或者用回教名字说哈吉穆罕默德萨苏丁率领. 舰队惊人的宝船尺寸在这片水域前所未见. 尽管实力强大, 这支远征队却似乎并没有征服的意图, 并将在不久后前往别的地方;;;;;;;;;;x
+EVTDESC89501;一支来自远方东土的庞大舰队出现在了阿拉伯海。 舰队由宦官郑和率领，他在阿拉伯世界以哈吉·穆罕默德·萨苏丁之名为人所知晓。 舰队惊人的宝船尺寸在这片水域前所未见。 尽管实力无可匹敌，这支考察船队却似乎并没有征服的打算，并将在不久后前往探索别的地方。;;;;;;;;;;x
 EVTOPTA89501;一路顺风.;;;;;;;;;;x
 EVTNAME60116;蒙古人洗劫了巴格达!;;;;;;;;;;x
 EVTDESC60116;伟大的城市巴格达, 全世界最重要的学识中心之一, 被饥饿的蒙古部落吞噬. 似乎没有什么可以满足他们的毁灭欲. 底格里斯河不光被鲜血所染红, 还被来自智慧之家与城内其他大图书馆的无价和不可替代的巨著的墨水所染黑.;;;;;;;;;;x
