--- a/localisation/v2_00.csv
+++ b/localisation/v2_00.csv
@@ -100,7 +100,7 @@ HERBAD;祭司;;;;;;;;;;x
 RABBI;拉比;;;;;;;;;;x
 NOTIFICATION_EVENT_SETUP;事件通知;;;;;;;;;;x
 CTT_CHRISTIAN_CRUSADES_UNLOCKED;十字军时代到来\n;;;;;;;;;;x
-CTT_MUSLIM_JIHADS_UNLOCKED;杰哈德时代到来\n;;;;;;;;;;x
+CTT_MUSLIM_JIHADS_UNLOCKED;吉哈德时代到来\n;;;;;;;;;;x
 CTT_PAGAN_GHWS_UNLOCKED;异教徒大圣战时代到来\n;;;;;;;;;;x
 EVTNAME39660;十字军之王;;;;;;;;;;x
 EVTDESC39660;去圣地朝圣的基督徒尝尝遭受各种侮辱和迫害，朝圣之路并不安全。为了朝圣者和教徒在耶路撒冷的安全，虔诚的信徒，宗座[Root.GetTitledName]认为可以集结基督徒的力量对异教徒进行一次彻底的入侵。大规模的基督教圣战开始了——十字军。;;;;;;;;;;x
@@ -109,14 +109,14 @@ EVTOPTB39660;一群蠢货！;;;;;;;;;;x
 EVTDESC39661;东方的罗马帝国，拜占庭，基督教对抗东方那些穆哈穆德异教徒的坚实壁垒已经被击破。可怕的现状让宗座[Root.GetTitledName]开始思考集结基督徒的力量对异教徒进行彻底入侵的可能性。大规模的基督教圣战开始了——十字军。;;;;;;;;;;x
 EVTDESC39662;罗马，圣彼得的城市，教宗的圣座，被异教徒占领了。作为回应，流亡的教宗，宗座[Root.GetTitledName]宣布要集结基督教领主的力量夺回永恒之城。大规模的基督教圣战开始了——十字军。;;;;;;;;;;x
 EVTDESC39663;西方基督教的腹地被异教徒攻陷了！绝望的基督教领主们说服了宗座[Root.GetTitledName]在神的名义下联合基督教领主们，用强大的力量驱逐异教徒。大规模的基督教圣战开始了——十字军。;;;;;;;;;;x
-EVTNAME39670;新的杰哈德;;;;;;;;;;x
+EVTNAME39670;新的吉哈德;;;;;;;;;;x
 EVTDESC39670;伟大的陛下[Root.GetTitledName]已经被[Root.Religion.GetPriestTitle]们说服，现在正是时候宣布穆斯林们新的征服。如同正统哈里发时期那样，伊斯兰世界必须再一次的扩张。所有正义的穆斯林男人都应该准备加入军队，应对即将到来的战争。伊斯兰的扩张将再次开始。;;;;;;;;;;x
 EVTOPTA39670;真主至大！;;;;;;;;;;x
 EVTOPTB39670;真让人烦心。;;;;;;;;;;x
 EVTDESC39671;圣城耶路撒冷，先知夜行登霄之处，已经被异教徒攻陷！伟大的陛下[Root.GetTitledName]绝不会坐视不管！他宣布穆斯林将会像正统哈里发时期一样，再一次开始伟大的征服，守护伊斯兰世界！所有正义的穆斯林男人都应该准备加入军队，应对即将到来的战争。伊斯兰的扩张将再次开始。;;;;;;;;;;x
-EVTDESC39672;难以置信！圣城麦加居然被异教徒攻陷！天房如今正收到异教徒的玷污。伟大的陛下[Root.GetTitledName]宣布全新的杰哈德将要开始，必须不惜一切代价夺回圣城。所有正义的穆斯林男人都应该准备加入军队，应对即将到来的战争。伊斯兰的扩张将再次开始。;;;;;;;;;;x
-EVTDESC39673;伊斯兰世界的心脏地带正受到来自异教徒的强烈威胁。作为回应，伟大的陛下[Root.GetTitledName]宣布全新的杰哈德将要开始。伊斯兰世界的核心地区必须被夺回，不惜一切代价。所有正义的穆斯林男人都应该准备加入军队，应对即将到来的战争。伊斯兰的扩张将再次开始。;;;;;;;;;;x
-EVTDESC39674;伊斯兰世界正受到来自阿非利加的异教徒的强烈威胁。作为回应，伟大的陛下[Root.GetTitledName]宣布全新的杰哈德将要开始。西方的乌玛必须被夺回，不惜一切代价。所有正义的穆斯林男人都应该准备加入军队，应对即将到来的战争。伊斯兰的扩张将再次开始。;;;;;;;;;;x
+EVTDESC39672;难以置信！圣城麦加居然被异教徒攻陷！天房如今正收到异教徒的玷污。伟大的陛下[Root.GetTitledName]宣布全新的吉哈德将要开始，必须不惜一切代价夺回圣城。所有正义的穆斯林男人都应该准备加入军队，应对即将到来的战争。伊斯兰的扩张将再次开始。;;;;;;;;;;x
+EVTDESC39673;伊斯兰世界的心脏地带正受到来自异教徒的强烈威胁。作为回应，伟大的陛下[Root.GetTitledName]宣布全新的吉哈德将要开始。伊斯兰世界的核心地区必须被夺回，不惜一切代价。所有正义的穆斯林男人都应该准备加入军队，应对即将到来的战争。伊斯兰的扩张将再次开始。;;;;;;;;;;x
+EVTDESC39674;伊斯兰世界正受到来自阿非利加的异教徒的强烈威胁。作为回应，伟大的陛下[Root.GetTitledName]宣布全新的吉哈德将要开始。西方的乌玛必须被夺回，不惜一切代价。所有正义的穆斯林男人都应该准备加入军队，应对即将到来的战争。伊斯兰的扩张将再次开始。;;;;;;;;;;x
 EVTNAME39680;上古之神的愤怒;;;;;;;;;;x
 EVTDESC39680;在亚伯拉罕一神教徒们互相发动十字军和吉哈德的新时代, 伟大的[Root.GetTitledName]向[Root.Religion.GetName]的所有[Root.Religion.GetPriestTitle]通告了[Root.GetPossPronoun]计划, 一个宏大的[Root.Religion.GetName]异教回应. 实际上, 所有原始宗教的领袖都可以发起大圣战. 这或许是异教徒史无前例的扩张的开始。;;;;;;;;;;x
 EVTOPTA39680;伟大的[Root.Religion.GetRandomGodName]与我们同在！;;;;;;;;;;x
