--- a/localisation/v2_10b.csv
+++ b/localisation/v2_10b.csv
@@ -247,8 +247,8 @@ temple_barony_of_buddhist;佛寺;;;;;;;;;;x
 temple_barony_of_jain;耆那寺庙的;;;;;;;;;;x
 DEATH_SACRIFICED;献祭$KILLER$以供奉神灵;;;;;;;;;;x
 obj_become_paragon_of_enlightenment_title;成为开悟者;;;;;;;;;;x
-obj_become_paragon_of_enlightenment_desc;[This.GetTitledFirstName]广积善缘并欲修得大彻大悟，即对[This.GetHerHis]信仰的真正开悟。;;;;;;;;;;x
-opinion_enlightened;觉悟者;;;;;;;;;;x
+obj_become_paragon_of_enlightenment_desc;[This.GetTitledFirstName]广积善缘并欲修得大彻大悟，即对[This.GetHerHis]信仰的真正领悟。;;;;;;;;;;x
+opinion_enlightened;开悟者;;;;;;;;;;x
 paragon_of_enlightenment;潜心修法;;;;;;;;;;x
 EVTTOOLTIP1_RoI_2001;给[From.GetFullName]回复;;;;;;;;;;x
 brahmin_desc;这个特质属于婆罗门种姓，这是属于宗教人士的印度种姓制度最高等级。;;;;;;;;;;x
