--- a/localisation/v2_30c.csv
+++ b/localisation/v2_30c.csv
@@ -292,7 +292,7 @@ EVTOPTA_WoL_12021;别傻站着了, 把他放出来!;;;;;;;;;;x
 EVTDESC_WoL_12022;卫兵报告说在第一件惊悚的谋杀案发生地不远处有另一户农民被屠杀了. 但是这次凶手被当场抓获, 并在逃跑时被卫兵的弓箭打得千疮百孔. 现在看来你关起来的那个农民是无辜的. 不幸的是，数月前他已在你的地牢里死于非命.;;;;;;;;;;x
 EVTOPTA_WoL_12022;唉, 我怎么知道会这样呢?;;;;;;;;;;x
 EVTDESC_WoL_12501;你对于统治与管理上的事务的理解得到了加强.;;;;;;;;;;x
-EVTDESC_WoL_12502;最近的事件增长了你的财政能力.;;;;;;;;;;x
+EVTDESC_WoL_12502;最近的事件增长了你的财政能力。;;;;;;;;;;x
 EVTDESC_WoL_12503;断案加强了你的正义感. 你的判决对于你的子民有很大影响力, 你决定变得更公正.;;;;;;;;;;x
 EVTDESC_WoL_12504;随着越来越多的人要求旁听你的廷议, 你认识到要管理起整个领属还有很多需要做. 你必须更努力!;;;;;;;;;;x
 EVTDESC_WoL_12505;你不在满足于在桂冠上休憩. 你的领属面临的问题足足有一个军团. 除了你之外，没人能搞定它们.;;;;;;;;;;x
