--- a/localisation/v2_30d.csv
+++ b/localisation/v2_30d.csv
@@ -15,7 +15,7 @@ EVTOPTC_WOL_2100;不...我觉得我们应该去打探其他人的一些消息.;;
 EVTDESC_WOL_2065;很不幸,我没能在[FromFromFrom.GetTitledFirstName]身上搞到什么有用的消息.也许我该关注下其他地方?;;;;;;;;;;x
 EVTOPTA_WOL_2065;是的,这没有意义.;;;;;;;;;;x
 EVTOPTB_WOL_2065;不,我肯定 [FromFromFrom.GetSubjectPronoun]应对什么事情负责...;;;;;;;;;;x
-EVTDESC38313;生活的压力已然渐渐褪去,我现在不再紧张不安!;;;;;;;;;;x
+EVTDESC38313;生活的压力已然渐渐褪去,我现在不再§Y紧张不安§!！;;;;;;;;;;x
 EVTDESC38314;今天我以微笑来迎接新一天的到来,我不再沮丧消沉!;;;;;;;;;;x
 PICK_FOCUS_DESC;在§Y$YEARS$§!年时间内你不能再次变更关注点!;;;;;;;;;;x
 CANNOT_CANCEL;§R无法被取消。§!;;;;;;;;;;x
