--- a/localisation/text3.csv
+++ b/localisation/text3.csv
@@ -220,7 +220,7 @@ PROV27;多赛特;;;;;;;;;;x
 PROV28;萨默塞特;;;;;;;;;;x
 IS_LANDED;有封地;;;;;;;;;;x
 IS_NOT_LANDED;没有封地;;;;;;;;;;x
-STAT_INTRIGUE_DESC;智谋技能是间谍总管的主要属性。高智谋可提高发现密谋和实施秘密行动（例如暗杀）的成功率。;;;;;;;;;;x
+STAT_INTRIGUE_DESC;密谋能力是间谍总管的主要属性。高密谋能力可提高发现阴谋和实施秘密行动（例如暗杀）的成功率。;;;;;;;;;;x
 STAT_STEWARDSHIP_CHAR_DESC;有§Y$VALUE$§!点财政技能，§Y[GetTitledFirstName]§!被认为是$DESC$管理者。这也会影响你的你的最大直辖领地规模。;;;;;;;;;;x
 EVTOPTB39000;太棒了！;;;;;;;;;;x
 HINT_LAW_VIEW_TEXT_3;王国和帝国可以实行王权法。这不仅会影响该国事实上的封臣，还会影响法理上的封臣。但事实国土外的异端和异教徒不受影响。;;;;;;;;;;x
@@ -257,7 +257,7 @@ LOADING_TIP_41;分封.少量直属封臣更为容易控制。;;;;;;;;;;x
 LOADING_TIP_42;如果盟友喜欢你的敌人胜过你，他们可能拒绝参与你的战争。;;;;;;;;;;x
 LOADING_TIP_43;你可以在直属封臣的领地上修建建筑。;;;;;;;;;;x
 LOADING_TIP_44;儿童往往会容易得到与其监护人相同的特质和技能。;;;;;;;;;;x
-LOADING_TIP_45;基督徒发动十字军远征，穆斯林发动圣战。;;;;;;;;;;x
+LOADING_TIP_45;基督徒发动十字军远征，穆斯林发动吉哈德。;;;;;;;;;;x
 LOADING_TIP_46;贵族关注声望。宗教领袖关注虔诚。人人都关心金币。;;;;;;;;;;x
 LOADING_TIP_47;如果一位敌对教宗推翻了现任教宗，他会成为新的教宗。;;;;;;;;;;x
 DYNTREE_INFO_TT;树注释;;;;;;;;;;x
