--- a/localisation/v2_00b.csv
+++ b/localisation/v2_00b.csv
@@ -15,7 +15,7 @@ EVTDESC39102;耶路撒冷的日耳曼圣玛丽医院骑士团在[Root.Religion.G
 EVTDESC_SOA_1709;圣安东尼骑士团是世界上最早的骑士团之一。公元370年，使徒隐修士安东尼在埃塞俄比亚皇帝资助下成立了圣安东尼骑士团。\n\尽管他们几百年来一直保持低调，但是现在，这个僧侣骑士团又重现在世人面前。他们规定的宗旨是从所有想要伤害[Root.Religion.GetName]基督徒的手中保护这些信徒。此外，只要该团一发现异教徒和异端踪影，该团就会对他们进行清洗。;;;;;;;;;;x
 EVTDESC_SOA_1809;一些波斯的优秀战士自发建立了旨在为捍卫[Root.Religion.GetName]信仰而献身的新教团。他们称自己为长生军，就像希罗多德描述的古波斯精英战士那样。他们似乎打算发扬他们那些有着传奇色彩的先祖们的军师传统。\n\n这一军事教团宣誓要与所有威胁琐罗亚斯德的遗产之人作战，而且不会让祆教重蹈七世纪时在阿拉伯对外征服战争中一败涂地的覆辙。;;;;;;;;;;x
 EVTDESC_SOA_1209;一群属于苏菲派的德尔维希托钵僧在一位来自呼罗珊的名为哈吉·的神秘主义者领导下崛起。为“万物合一”而不懈奋斗的同时，拜克塔什教团通过冥想和思索古兰经教义的隐藏含义来磨练自己的灵魂。拜克塔什教团十分好战，而且在[Root.Religion.GetName]穆斯林士兵中尤其受欢迎。拜克塔什教团宣誓捍卫伊斯兰教并与各种各样的异端和多神教徒作战。;;;;;;;;;;x
-EVTDESC88000;有个消息流传甚广：一位[Root.Religion.GetName]宣教士哈桑·伊本·萨巴哈已在西波斯某处成立一个新的名为哈萨辛派的教团。通过使用各类欺诈手段，这伙神秘的，由训练有素的杀手组成的狂热分子已经占领了阿拉穆特的山间要塞，并把该地设为他们教团的总部。只有小部分残暴的凶徒能够成为哈桑无私的和无畏的信徒......;;;;;;;;;;x
+EVTDESC88000;有个消息流传甚广：一位[Root.Religion.GetName]宣教士哈桑·伊本·萨巴哈已在西波斯某处成立一个新的名为哈萨辛派的教团。通过使用各类欺诈手段，这伙神秘的，由训练有素的杀手组成的狂热分子已经占领了阿拉木图的山间要塞，并把该地设为他们教团的总部。只有小部分残暴的凶徒能够成为哈桑无私的和无畏的信徒......;;;;;;;;;;x
 donate_money_to_assassins;捐献 300¤ 给哈萨辛;;;;;;;;;;x
 donate_money_to_assassins_desc;我可以捐钱给哈萨辛派来换取[Player.Religion.GetPietyName]虔诚度;;;;;;;;;;x
 donate_money_to_bektashi;捐献 300¤ 给拜克塔什教团;;;;;;;;;;x
