--- a/localisation/v2_10.csv
+++ b/localisation/v2_10.csv
@@ -143,7 +143,7 @@ EVTTOOLTIP91365;给 [This.GetFirstName] 安排一场 [From.GetPossPronoun] room;
 patron_shiva;守护神: 湿婆神;;;;;;;;;;x
 patron_vishnu;守护神: 毗湿奴;;;;;;;;;;x
 patron_brahma;守护神: 大梵天;;;;;;;;;;x
-patron_kali;守护神: 时母神;;;;;;;;;;x
+patron_kali;守护神: 迦梨时母神;;;;;;;;;;x
 patron_ganesha;守护神: 欢喜天象头神;;;;;;;;;;x
 patron_ganga;守护神: 恒河女神;;;;;;;;;;x
 hold_tiger_hunt;举行猎虎大会;;;;;;;;;;x
@@ -156,7 +156,7 @@ EVTOPTB_RoI_100;头戴王冠, 全能的毗湿奴.;;;;;;;;;;x
 EVTOPTC_RoI_100;四首四面, 威力的梵天.;;;;;;;;;;x
 EVTOPTD_RoI_100;应该还有其他神......;;;;;;;;;;x
 EVTDESC_RoI_101;神明威力无穷, 遍布宇宙. 供奉其中一位, 祂便会赐福于我们家族.;;;;;;;;;;x
-EVTOPTA_RoI_101;降魔伏妖, 时光女神时母.;;;;;;;;;;x
+EVTOPTA_RoI_101;降魔伏妖, 时光女神迦梨时母.;;;;;;;;;;x
 EVTOPTB_RoI_101;欢喜天, 破除一切障碍.;;;;;;;;;;x
 EVTOPTC_RoI_101;恒河女神, 荡涤污秽.;;;;;;;;;;x
 EVTOPTD_RoI_101;转念一想, 我还是想要供奉三相神......;;;;;;;;;;x
