--- a/localisation/v2_20c.csv
+++ b/localisation/v2_20c.csv
@@ -42,7 +42,7 @@ CharlemagneDLC;查理曼;;;;;;;;;;x
 EarlyWesternClothingDLC;早期西方服饰包;;;;;;;;;;x
 EarlyEasternClothingDLC;早期东方服饰包;;;;;;;;;;x
 DynastyShieldsCharlemagneDLC;查理曼王朝盾徽;;;;;;;;;;x
-EVTDESC107000;注意! 在公元1066年的世界正如你所看到的,被分为许多不同的地域-国家 - 每一个国家都由其君主或是其他的统治者控制着. 王国风云II这个游戏表现了关于这些统治者的个人,家族,关系,阴谋以及权力.是成为一名征服者还是一个温和的家族长者,都取决于玩家你的抉择,但是你要记住不论你如何想,其他的角色都会渴求更多的土地与财富.\n\n王国风云II是一个实时战略游戏.关闭这个窗口并通过调节游戏速度开始游戏...;;;;;;;;;;x
+EVTDESC107000;注意！在公元1066年的世界正如您所看到的，被分为许多不同的地域——国家——每一个国家都由其君主或是其他的统治者控制着。王国风云II这个游戏表现了关于这些统治者的个人、家族、关系、阴谋以及权力。是成为一名征服者还是一个温和的家族长者，都取决于玩家您的抉择，但是要记住不论您如何想，其他的角色都会渴求更多的土地与财富。\n\n王国风云II是一个实时战略游戏。关闭这个窗口并通过调节游戏速度开始游戏……;;;;;;;;;;x
 EVTDESC107304;为了将您的部队装载上船，请将您的舰队驶入一个陆地省份以令其入港.然后您可以将您的部队开入同一省份,通过点击军队上船键使得部队与舰队合并. 你也可以让你在临海省份的军队直接移动到在邻近该省份洋面上的舰队上的形式使得部队登船. 请注意,舰队越大能装载的部队越多.;;;;;;;;;;x
 EVTDESC107306;当您的部队停留在敌人控制的领地时候, 他们将会围攻敌人的产业.您需要占领该省份内所有的产业以完全占据该地区. 围城战需要消耗时间,同时围城部队人数必须多于守军. 围攻部队越多,攻陷的时间越快. 当地堡垒的等级也会影响到围城时间的长短.如果你想了解围城的进度, 请选择你的部队或者点击正在围攻的省份.;;;;;;;;;;x
 CHRONICLE_GRAND_TOURNAMENT;[From.GetTitledFirstName] 举办了一场盛大的比武, 邀请了国内所有的大领主和骑士前往参加.;;;;;;;;;;x
@@ -97,7 +97,7 @@ EVTOPTB_CM_510;确实是一个强大的帝国.;;;;;;;;;;x
 EVTOPTC_CM_510;奇怪的消息...;;;;;;;;;;x
 EVTOPTD_CM_510;跳梁小丑,沐猴而冠.;;;;;;;;;;x
 EVTTITLE_CM_1500;查理曼的加冕;;;;;;;;;;x
-EVTDESC_CM_1500;在成功地掌握权力、击败敌人并统治法兰克王国后， [From.GetFirstNameWithNick] 终于于 [GetDateText] 加冕称帝。他庄重地站在王座前，将 [From.PrimaryTitle.GetName] 的头冠严肃地戴在头上。他是父亲丕平的继承人！他是祖父铁锤查理的后裔！他是人民的领袖！他是不败的战神！他向世人宣告他的英名将永垂青史。他的目光早已穿过了下面的贵族和教士们，穿过了辉煌的当下，展望着更伟大、更灿烂的未来……;;;;;;;;;;x
+EVTDESC_CM_1500;在成功地掌握权力、击败敌人并统治法兰克王国后，[From.GetFirstNameWithNick]终于于[GetDateText]加冕称帝。他庄重地站在王座前，将[From.PrimaryTitle.GetName]的头冠严肃地戴在头上。他是父亲丕平的继承人！他是祖父铁锤查理的后裔！他是人民的领袖！他是不败的战神！他向世人宣告他的英名将永垂青史。他的目光早已穿过了下面的贵族和教士们，穿过了辉煌的当下，展望着更伟大、更灿烂的未来……;;;;;;;;;;x
 CHRONICLE_AVOID_IMPRISON_WAR;[Root.GetTitledNameWithNick] 勉强逃脱了 [From.GetTitledNameWithNick]的监禁并树起了[Root.GetHerHis]叛旗.;;;;;;;;;;x
 CHRONICLE_FAILED_IMPRISON_WAR;[Root.GetTitledNameWithNick] 试图监禁 [From.GetTitledNameWithNick]但是失败了,这导致 [From.GetHerHim]逃回领地揭竿而起.;;;;;;;;;;x
 CHRONICLE_INHERIT_MAJOR_TITLE;[Root.GetDynName] 继承了 [From.GetName] 自 [FromFrom.GetDynName].;;;;;;;;;;x
