--- a/localisation/v2_50b.csv
+++ b/localisation/v2_50b.csv
@@ -699,7 +699,7 @@ CB_NAME_HUMILIATE;羞辱;;;;;;;;;;x
 WAR_NAME_HUMILIATE;$ORDER$$FIRST_ADJ$战争来羞辱$DEFENDER$;;;;;;;;;;x
 nomad_humiliate_cb_desc;羞辱敌人并且夺取他们的人民来强化自己的部族。;;;;;;;;;;x
 DECLINE_LAW;否决;;;;;;;;;;x
-EVTOPTC290;否决;;;;;;;;;;x
+EVTOPTC290;反对;;;;;;;;;;x
 INFAMY_HISTORY_STR;$TEXT$：§Y$VALUE$%§!;;;;;;;;;;x
 INFAMY_DECAY;每月衰减：§Y$DECAY$%§!;;;;;;;;;;x
 VASSAL_REALM_INFAMY;$REALM|Y$的统治者;;;;;;;;;;x
@@ -914,7 +914,7 @@ EVTOPTB_ZE_13611_FERR;亲吻他的面颊。;;;;;;;;;;x
 EVTOPTC_ZE_13611_CARP;提议在僻静无人的谷仓中彼此相拥。;;;;;;;;;;x
 EVTOPTC_ZE_13611_FERR;提议在僻静无人的谷仓中彼此相拥。;;;;;;;;;;x
 revoke_title_law;收回头衔;;;;;;;;;;x
-revoke_title_law_desc;法律限制头衔的收回.;;;;;;;;;;x
+revoke_title_law_desc;法律限制头衔收回.;;;;;;;;;;x
 revoke_title_law_0;不允许收回头衔。;;;;;;;;;;x
 revoke_title_law_0_desc;君主在任何情况下都不得干涉世袭头衔的所有权。;;;;;;;;;;x
 revoke_title_law_0_option;无;;;;;;;;;;x
@@ -1398,8 +1398,8 @@ seize_church_assets_desc;这座教堂里值钱的东西都被抢走了！;;;;;;;
 extort_subjects;敲诈臣属;;;;;;;;;;x
 extort_subjects_desc;向你的臣属勒索一笔钱是一个可以快速给你的战争小金库筹集资金的绝佳方法 - 不过要小心，这个行为在你的臣属看来非常暴虐。那些在意自己臣属的领主会因为这种行为损害到自己的心理健康。;;;;;;;;;;x
 obj_build_a_war_chest_title;建立战争金库;;;;;;;;;;x
-obj_build_a_war_chest_desc;[This.GetTitledFirstName] 想要建立一个战争金库 为[This.GetHerHis]国土作战争准备;;;;;;;;;;x
-obj_build_a_war_chest_success_custom_tooltip;已经为 [This.GetHerHis] 的领地聚敛了一笔数额可观的金钱：如统治一个伯爵领，需要 300¤；公爵领，需要 500¤；王国，需要 500¤；帝国，需要 1000¤。;;;;;;;;;;x
+obj_build_a_war_chest_desc;[This.GetTitledFirstName]想要建立一个战争金库，并且在[This.GetHerHis]领土做战争准备！;;;;;;;;;;x
+obj_build_a_war_chest_success_custom_tooltip;已经在[This.GetHerHis]领地聚敛了一笔数额可观的金钱：如统治一个伯爵领，需要300¤；统治一个公爵领，需要500¤；统治一个王国，需要700¤；统治一个帝国，需要 1000¤。;;;;;;;;;;x
 extort_consequences_custom_tooltip;看看你手头有什么选项;;;;;;;;;;x
 extort_cooldown_custom_tooltip;不可在最近六个月内敲诈过你的臣属;;;;;;;;;;x
 EVTTOOLTIP_ZE_21100;开征一项‘额外’税 对[extra_tax_target.GetName]的农民;;;;;;;;;;x
@@ -1490,7 +1490,7 @@ LAW_COUNCIL_REJECTED_LOG;$TITLE$ 的内阁已经否决建立"$LAW$"法;;;;;;;;;;
 tut_9b_6;在 国土与义务 标签页中 你会发现法律并不仅仅影响你自己 同样也决定你的封臣可以提供多少征召兵和税收。你可以根据自己的喜好定制自己的王国。点击下一步结束这一部分;;;;;;;;;;x
 tut_8b_6;在 国土 标签页中你会找到 主教叙任权法律。这可以设定为 教宗，这意味着教宗选择主教，或者 自由，这意味着你可以自己选择你的主教。当然教宗对此肯定不会开心。点击下一步学习十字军相关内容;;;;;;;;;;x
 tut_9c_6;在 国土 标签页中你会看到跟继承法无关的法律。在最上方有一个皇冠标记的法律，这意味着这是王权法。他们决定国王或者皇帝有多少行动自由。你的封臣会非常难被说服，但如果他们足够喜欢你 而且你有很高的声望，他们会稍稍作态反对 但不会是个大问题;;;;;;;;;;x
-HINT_CHAR_VIEW_TEXT_2;角色界面的下半部分用于展示近血缘关系。封臣指的是所选角色手下有封地的封建领主。宫廷界面列出了在宫廷的角色。条约界面列出了跟你有外交关系的领主，比如互有盟约，以及'外地'标签列出目前正在外出的廷臣。;;;;;;;;;;x
+HINT_CHAR_VIEW_TEXT_2;角色界面的下半部分用于展示近血缘关系。封臣指的是所选角色手下有封地的封建领主。宫廷界面列出了在宫廷的角色。条约界面列出了跟您有外交关系的领主，比如互有盟约，以及‘外地’标签列出目前正在外出的廷臣。;;;;;;;;;;x
 HINT_COUNCIL_VIEW_TEXT_4;有些角色梦想获得一个内阁位置。让他们满足愿望会让他们对你感恩戴德。;;;;;;;;;;x
 tut_4b_9;临时修正有失效日期。特定事件可能会让你获得对其他角色的好感度修正 通常这会持续有限的一段时间（比如一到两年）。点击下一步继续;;;;;;;;;;x
 EVTDESC107301;如果你有盟友 他们会自动加入你所有的战争。有些盟友（比如部落封臣）会需要召唤进入战争（如果他们同意的话）;;;;;;;;;;x
